change bootstrap to fix ugly dark mode problem

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,27 +1,28 @@
 * {
-  box-sizing: border-box;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-kerning: auto;
+	box-sizing: border-box;
+	text-rendering: optimizeLegibility;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-kerning: auto;
 }
 
 html {
-  -webkit-text-size-adjust: 100%;
+	-webkit-text-size-adjust: 100%;
 }
 
 body {
-  margin: 0;
+	margin: 0;
+	font-family: "Inter", sans-serif;
 }
 
 .section {
-  height: 100vh;
-  height: calc(var(--vh, 1vh) * 100);
+	height: 100vh;
+	height: calc(var(--vh, 1vh) * 100);
 }
 
 .status-circle {
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  display: inline-block;
-}/*# sourceMappingURL=main.css.map */
+	height: 12px;
+	width: 12px;
+	border-radius: 50%;
+	display: inline-block;
+} /*# sourceMappingURL=main.css.map */
